borsh-derive/src/internals/schema/enum/snapshots/borsh_derive__internals__schema__r#enum__tests__generic_associated_type_param_override_conflict.snap
---
source: borsh-derive/src/internals/schema/enum/mod.rs
expression: actual.unwrap_err()
---
Error(
    "`borsh_skip` cannot be used at the same time as `schema(params = ...)`",
)
